src/test/ui/closures/2229_closure_analysis/filter-on-struct-member.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/filter-on-struct-member.rs:3:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/filter-on-struct-member.rs:28:13
   |
LL | /             |v| {
LL | |                 self.filter.div += 1;
LL | |                 self.filter.allowed(*v)
LL | |             }
   | |_____________^
   |
note: Capturing self[Deref,(0, 0),(0, 0)] -> UniqueImmBorrow
  --> $DIR/filter-on-struct-member.rs:29:17
   |
LL |                 self.filter.div += 1;
   |                 ^^^^^^^^^^^^^^^
note: Capturing self[Deref,(0, 0)] -> ImmBorrow
  --> $DIR/filter-on-struct-member.rs:30:17
   |
LL |                 self.filter.allowed(*v)
   |                 ^^^^^^^^^^^

error: Min Capture analysis includes:
  --> $DIR/filter-on-struct-member.rs:28:13
   |
LL | /             |v| {
LL | |                 self.filter.div += 1;
LL | |                 self.filter.allowed(*v)
LL | |             }
   | |_____________^
   |
note: Min Capture self[Deref,(0, 0)] -> UniqueImmBorrow
  --> $DIR/filter-on-struct-member.rs:29:17
   |
LL |                 self.filter.div += 1;
   |                 ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

